--- a/app/src/main/res/layout/alert_window.xml
+++ b/app/src/main/res/layout/alert_window.xml
@@ -42,23 +42,23 @@
 
         <TextView
             android:id="@+id/des"
-            android:layout_width="298dp"
+            android:layout_width="263dp"
             android:layout_height="33dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.628"
             app:layout_constraintStart_toEndOf="@+id/img"
-            app:layout_constraintTop_toTopOf="@+id/img"
+            app:layout_constraintTop_toBottomOf="@+id/title"
             tools:text="des" />
 
         <Button
             android:id="@+id/btn"
             android:layout_width="132dp"
-            android:layout_height="43dp"
+            android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -69,7 +69,9 @@
             app:cornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/des" />
+            app:layout_constraintTop_toBottomOf="@+id/des"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
