--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -95,6 +95,19 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/language_text" />
 
+                    <TextView
+                        android:id="@+id/location_text2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="48dp"
+                        android:text="@string/alert"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/location_text" />
+
                     <RadioGroup
                         android:id="@+id/location_radio_group"
                         android:layout_width="wrap_content"
@@ -122,6 +135,36 @@
                             android:layout_marginStart="15dp"
                             android:buttonTint="@color/white"
                             android:text="@string/map"
+                            android:textColor="@color/white" />
+                    </RadioGroup>
+
+                    <RadioGroup
+                        android:id="@+id/alert_radio_group"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/location_text"
+                        app:layout_constraintTop_toBottomOf="@+id/location_radio_group">
+
+                        <RadioButton
+                            android:id="@+id/alert_radio_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginEnd="15dp"
+                            android:buttonTint="@color/white"
+                            android:text="@string/alarm"
+                            android:textColor="@color/white" />
+
+                        <RadioButton
+                            android:id="@+id/notification_radio_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:buttonTint="@color/white"
+                            android:text="@string/notification"
                             android:textColor="@color/white" />
                     </RadioGroup>
 
@@ -159,14 +202,15 @@
                         android:id="@+id/current_temp_text"
                         android:layout_width="81dp"
                         android:layout_height="25dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="20dp"
                         android:text="@string/temperature"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.501"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/location_radio_group" />
+                        app:layout_constraintTop_toBottomOf="@+id/alert_radio_group" />
 
                     <RadioGroup
                         android:id="@+id/temp_radio_group"
@@ -207,7 +251,7 @@
                             android:text="@string/fehrenheit"
                             android:textColor="@color/white" />
                     </RadioGroup>
-                    up>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
